tests/snapshots/tui_test__regression_test_issue_21_user_message_appears_immediately.snap
---
source: tests/tui_test.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│You:                                                                          │"
"│  Test message                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Streaming...──────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
