tests/snapshots/tui_test__tui_confirmation_prompt_state_renders.snap
---
source: tests/tui_test.rs
expression: terminal.backend()
---
"You:                                                                            "
"  Write a file                                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌ Allow 'write_file'? [y/n] ───────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ↑0 ↓0   no git                                                                 "
