tests/snapshots/tui_test__tui_edit_file_renders_as_diff.snap
---
source: tests/tui_test.rs
assertion_line: 330
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│[Tool]:                                                                       │"
"│  edit_file: src/main.rs                                                      │"
"│                                                                              │"
"│  ```diff                                                                     │"
"│  -fn main() {                                                                │"
"│  -    println!("old");                                                       │"
"│  -}                                                                          │"
"│  +fn main() {                                                                │"
"│  +    println!("new");                                                       │"
"│  +}                                                                          │"
"│  ```                                                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input (Enter to send, Ctrl+C to quit)─────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
