tests/snapshots/tui_test__tui_markdown_renders_assistant_code_block.snap
---
source: tests/tui_test.rs
assertion_line: 297
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│Assistant:                                                                    │"
"│  Here is an example:                                                         │"
"│                                                                              │"
"│  ```rust                                                                     │"
"│  fn main() {                                                                 │"
"│      println!("hello");                                                      │"
"│  }                                                                           │"
"│  ```                                                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input (Enter to send, Ctrl+C to quit)─────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
