tests/snapshots/tui_test__tui_markdown_renders_assistant_headings.snap
---
source: tests/tui_test.rs
assertion_line: 281
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│You:                                                                          │"
"│  Explain Rust                                                                │"
"│                                                                              │"
"│Assistant:                                                                    │"
"│  # Rust Programming                                                          │"
"│                                                                              │"
"│  Rust is a systems language.                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input (Enter to send, Ctrl+C to quit)─────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
