tests/snapshots/tui_test__tui_markdown_renders_assistant_list.snap
---
source: tests/tui_test.rs
assertion_line: 313
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│Assistant:                                                                    │"
"│  Key features:                                                               │"
"│                                                                              │"
"│  - Memory safety                                                             │"
"│  - Zero-cost abstractions                                                    │"
"│  - Fearless concurrency                                                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input (Enter to send, Ctrl+C to quit)─────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
