tests/snapshots/tui_test__tui_scrolled_up_shows_earlier_content.snap
---
source: tests/tui_test.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│You:                                                                          │"
"│  Message 11                                                                  │"
"│                                                                              │"
"│You:                                                                          │"
"│  Message 12                                                                  │"
"│                                                                              │"
"│You:                                                                          │"
"│  Message 13                                                                  │"
"│                                                                              │"
"│You:                                                                          │"
"│  Message 14                                                                  │"
"│                                                                              │"
"│You:                                                                          │"
"│  Message 15                                                                  │"
"│                                                                              │"
"│You:                                                                          │"
"│  Message 16                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ -- INSERT -- ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ↑0 ↓0   no git                                                                 "
