tests/snapshots/tui_test__tui_streaming_state.snap
---
source: tests/tui_test.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│You:                                                                          │"
"│  Tell me a story                                                             │"
"│                                                                              │"
"│Assistant:                                                                    │"
"│  Once upon a time                                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Streaming... (Esc to interrupt)───────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ↑0 ↓0   no git                                                                 "
