tests/snapshots/tui_test__tui_tool_result_renders_below_invocation.snap
---
source: tests/tui_test.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│[Tool]:                                                                       │"
"│  bash {"command":"ls"}                                                       │"
"│                                                                              │"
"│[Result]:                                                                     │"
"│  file1.txt file2.txt                                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input (Enter to send, Ctrl+C to quit)─────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
